feat: ヘッダーとプロフィールセクションのレスポンシブ余白・幅を調整
- プロフィールセクションの左右余白を @media クエリで対応
  - SP (0-749px): 16px
  - PC (750px+): 106px
- 検索input幅をレスポンシブに対応
  - SP: 120px, height: 20px
  - PC: 200px, height: 20px
- CSS module (.avatarLabel, .searchInput, .profileSection) で responsive 設定を一元管理

--- a/src/components/profile/InstagramProfilePage.module.css
+++ b/src/components/profile/InstagramProfilePage.module.css
@@ -10,3 +10,27 @@
   }
 }
 
+.searchInput {
+  width: 120px;
+  height: 20px;
+}
+
+@media (min-width: 750px) {
+  .searchInput {
+    width: 200px;
+    height: 20px;
+  }
+}
+
+.profileSection {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+@media (min-width: 750px) {
+  .profileSection {
+    padding-left: 106px;
+    padding-right: 106px;
+  }
+}
+
